--- a/bidder-2.html
+++ b/bidder-2.html
@@ -58,19 +58,21 @@
               </div>
             </div>
             <p class="pb-3">Please enter the code you’ve received on +966548777798. Typed the wrong phone? <a href="bidder-1.html" class="see-all see-all-2 fz-16">Click here to change it.</a></p>
-            <div class="form-group">
-              <div class="mb-2">SMS Code<span class="text-red">*</span></div>
-              <input type="text" class="form-control" placeholder="305-305-305">
-              <div class="fz-14 mt-2">By signing up, you agree with <a href="#!" class="see-all see-all-2 fz-14">Asaas’s TOC and Privacy Policy.</a></div>
-            </div>
-            <div class="row align-items-center mt-4">
-              <div class="col-sm-auto">
-                <a href="bidder-3.html" class="btn btn-success btn-sign ml-0 fz-18 font-weight-bold d-block d-sm-inline-block">Verify phone number</a>
+            <form id="form">
+              <div class="form-group">
+                <div class="mb-2">SMS Code<span class="text-red">*</span></div>
+                <input type="number" class="form-control" placeholder="305-305-305" name="code">
+                <div class="fz-14 mt-2">By signing up, you agree with <a href="#!" class="see-all see-all-2 fz-14">Asaas’s TOC and Privacy Policy.</a></div>
               </div>
-              <div class="col-sm text-center text-sm-right mt-2 mt-sm-0">
-                <a href="bidder-1.html" class="see-all see-all-2">I didn’t receive it</a>
+              <div class="row align-items-center mt-4">
+                <div class="col-sm-auto">
+                  <a href="#!" class="btn btn-success btn-sign ml-0 fz-18 font-weight-bold d-block d-sm-inline-block">Verify phone number</a>
+                </div>
+                <div class="col-sm text-center text-sm-right mt-2 mt-sm-0">
+                  <a href="bidder-1.html" class="see-all see-all-2">I didn’t receive it</a>
+                </div>
               </div>
-            </div>
+            </form>
           </div>
         </div>
       </div>
@@ -159,6 +161,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.js"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/node-waves/0.7.6/waves.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.1/jquery.validate.min.js"></script>
   <script src="js/common.js"></script>
 
 </body>
