--- a/auctioneer-4.html
+++ b/auctioneer-4.html
@@ -61,158 +61,160 @@
                 <p class="pb-3">In order to ensure fairness and reliability on the platform, we require auctioneers to provide their company information and license documents. Verification takes 1-3 business days and an Asaas team member might contact you for further details.</p>
               </div>
             </div>
-            <div class="row">
-              <div class="col-xl-6">
-                <div class="form-group form-group-gray">
-                  <div class="mb-2">First name</div>
-                  <input type="text" class="form-control" placeholder="Albus" disabled>
-                  <div class="fz-14 mt-2">Confirmed through your government ID</div>
-                </div>
-              </div>
-              <div class="col-xl-6">
-                <div class="form-group form-group-gray">
-                  <div class="mb-2">Second name</div>
-                  <input type="text" class="form-control" placeholder="Severus" disabled>
-                  <div class="fz-14 mt-2">Confirmed through your government ID</div>
-                </div>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-xl-6">
-                <div class="form-group form-group-gray">
-                  <div class="mb-2">Third name</div>
-                  <input type="text" class="form-control" placeholder="Al" disabled>
-                  <div class="fz-14 mt-2">Confirmed through your government ID</div>
-                </div>
-              </div>
-              <div class="col-xl-6">
-                <div class="form-group form-group-gray">
-                  <div class="mb-2">Family name</div>
-                  <input type="text" class="form-control" placeholder="Potter" disabled>
-                  <div class="fz-14 mt-2">Confirmed through your government ID</div>
-                </div>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-xl-6">
-                <div class="form-group">
-                  <div class="mb-2">Your work email<span class="text-red">*</span></div>
-                  <input type="text" class="form-control" placeholder="albus@ministryofmagic.com.sa">
-                </div>
-              </div>
-            </div>
-            <hr>
-            <div class="row pt-3">
-              <div class="col-xl-6">
-                <div class="form-group">
-                  <div class="mb-2">Company legal name<span class="text-red">*</span></div>
-                  <input type="text" class="form-control" placeholder="Awesome Auctions Co.">
-                  <div class="fz-14 mt-2">As per your legal license. Example: Aweosome Auctions Co.</div>
-                </div>
-              </div>
-              <div class="col-xl-6">
-                <div class="form-group">
-                  <div class="row row-1 mb-2 align-items-center">
-                    <div class="col">Company address<span class="text-red">*</span>
-                    </div>
+            <form id="form">
+              <div class="row">
+                <div class="col-xl-6">
+                  <div class="form-group form-group-gray">
+                    <div class="mb-2">First name</div>
+                    <input type="text" class="form-control" placeholder="Albus" name="firstname" disabled>
+                    <div class="fz-14 mt-2">Confirmed through your government ID</div>
                   </div>
-                  <input type="text" class="form-control" placeholder="King Fahd Rd, Al Olaya, Riyadh 11564">
-                  <div class="fz-14 mt-2">Your company’s headquarters or legal addres</div>
+                </div>
+                <div class="col-xl-6">
+                  <div class="form-group form-group-gray">
+                    <div class="mb-2">Second name</div>
+                    <input type="text" class="form-control" placeholder="Severus" name="firstname" disabled>
+                    <div class="fz-14 mt-2">Confirmed through your government ID</div>
+                  </div>
                 </div>
               </div>
-            </div>
-            <div class="row">
-              <div class="col-xl-6">
-                <div class="form-group">
-                  <div class="row row-1 mb-2 align-items-center">
-                    <div class="col">Company registration number<span class="text-red">*</span>
-                    </div>
-                    <div class="col-auto fz-14">0/8</div>
+              <div class="row">
+                <div class="col-xl-6">
+                  <div class="form-group form-group-gray">
+                    <div class="mb-2">Third name</div>
+                    <input type="text" class="form-control" placeholder="Al" name="firstname" disabled>
+                    <div class="fz-14 mt-2">Confirmed through your government ID</div>
                   </div>
-                  <input type="text" class="form-control" placeholder="1010584421">
-                  <div class="fz-14 mt-2">Your license registration number found on your X10C certificate</div>
+                </div>
+                <div class="col-xl-6">
+                  <div class="form-group form-group-gray">
+                    <div class="mb-2">Family name</div>
+                    <input type="text" class="form-control" placeholder="Potter" name="firstname" disabled>
+                    <div class="fz-14 mt-2">Confirmed through your government ID</div>
+                  </div>
                 </div>
               </div>
-              <div class="col-xl-6">
-                <div class="form-group">
-                  <div class="row row-1 mb-2 align-items-center">
-                    <div class="col">Auction license certificate<span class="text-red">*</span>
-                    </div>
+              <div class="row">
+                <div class="col-xl-6">
+                  <div class="form-group">
+                    <div class="mb-2">Your work email<span class="text-red">*</span></div>
+                    <input type="email" class="form-control" placeholder="albus@ministryofmagic.com.sa" name="email">
                   </div>
-                  <div class="uploader-plugin">
-                    <div id="uploader">
-                      <div class="uploadDoc">
-                        <div class="fileUpload btn btn-orange">
-                          <img src="img/upload.svg" class="icon">
-                          <span class="upl" id="upload">Upload your auction license certificate</span>
-                          <input type="file" class="upload up" id="up" onchange="readURL(this);"/>
+                </div>
+              </div>
+              <hr>
+              <div class="row pt-3">
+                <div class="col-xl-6">
+                  <div class="form-group">
+                    <div class="mb-2">Company legal name<span class="text-red">*</span></div>
+                    <input type="text" class="form-control" placeholder="Awesome Auctions Co." name="firstname">
+                    <div class="fz-14 mt-2">As per your legal license. Example: Aweosome Auctions Co.</div>
+                  </div>
+                </div>
+                <div class="col-xl-6">
+                  <div class="form-group">
+                    <div class="row row-1 mb-2 align-items-center">
+                      <div class="col">Company address<span class="text-red">*</span>
+                      </div>
+                    </div>
+                    <input type="text" class="form-control" placeholder="King Fahd Rd, Al Olaya, Riyadh 11564" name="firstname">
+                    <div class="fz-14 mt-2">Your company’s headquarters or legal addres</div>
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-xl-6">
+                  <div class="form-group">
+                    <div class="row row-1 mb-2 align-items-center">
+                      <div class="col">Company registration number<span class="text-red">*</span>
+                      </div>
+                      <div class="col-auto fz-14">0/8</div>
+                    </div>
+                    <input type="number" class="form-control" placeholder="1010584421" name="registrationnumber">
+                    <div class="fz-14 mt-2">Your license registration number found on your X10C certificate</div>
+                  </div>
+                </div>
+                <div class="col-xl-6">
+                  <div class="form-group">
+                    <div class="row row-1 mb-2 align-items-center">
+                      <div class="col">Auction license certificate<span class="text-red">*</span>
+                      </div>
+                    </div>
+                    <div class="uploader-plugin">
+                      <div id="uploader">
+                        <div class="uploadDoc">
+                          <div class="fileUpload btn btn-orange">
+                            <img src="img/upload.svg" class="icon">
+                            <span class="upl" id="upload">Upload your auction license certificate</span>
+                            <input type="file" class="upload up" id="up" onchange="readURL(this);"/>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="fz-14 mt-2">Please upload your X5-C auction certificate as pdf, png, or jpeg image</div>
+                  </div>
+                </div>
+              </div>
+              <hr>
+              <div class="row pt-3">
+                <div class="col-xl-6">
+                  <div class="form-group">
+                    <div class="row row-1 mb-2 align-items-center">
+                      <div class="col">Company display name<span class="text-red">*</span>
+                      </div>
+                    </div>
+                    <input type="text" class="form-control" placeholder="Awesome Auctions" name="firstname">
+                    <div class="fz-14 mt-2">Use your company’s brand or shorthand name. Example: Awesome Auctions</div>
+                  </div>
+                  <div class="form-group">
+                    <div class="row row-1 mb-3 align-items-center">
+                      <div class="col">Company icon<span class="text-red">*</span>
+                      </div>
+                    </div>
+                    <div class="row row-1">
+                      <div class="col-sm-6 col-lg-4">
+                        <div id="file-upload-form" class="uploader">
+                          <input id="file-upload" type="file" name="fileUpload" accept="image/*"/>
+                          <label for="file-upload" id="file-drag">
+                            <img id="file-image" src="#!" alt="Preview" class="hidden">
+                            <div id="start">
+                              <i class="bg-upload" aria-hidden="true"></i>
+                              <div>Upload</div>
+                              <div id="notimage" class="hidden">Please select an image</div>
+                            </div>
+                            <div id="response" class="hidden">
+                              <div id="messages"></div>
+                            </div>
+                          </label>
+                        </div>           
+                      </div>
+                      <div class="col-sm-6 col-lg-8 mt-3 mt-sm-0">
+                        <div class="fz-14">
+                          <p>Please upload your comapny’s icon or emblem. This image will be displayed on your auctions.</p>
+                          <p>For ideal results upload a 400x400 square jpeg file.</p>
                         </div>
                       </div>
                     </div>
                   </div>
-                  <div class="fz-14 mt-2">Please upload your X5-C auction certificate as pdf, png, or jpeg image</div>
                 </div>
-              </div>
-            </div>
-            <hr>
-            <div class="row pt-3">
-              <div class="col-xl-6">
-                <div class="form-group">
-                  <div class="row row-1 mb-2 align-items-center">
-                    <div class="col">Company display name<span class="text-red">*</span>
-                    </div>
-                  </div>
-                  <input type="text" class="form-control" placeholder="Awesome Auctions">
-                  <div class="fz-14 mt-2">Use your company’s brand or shorthand name. Example: Awesome Auctions</div>
-                </div>
-                <div class="form-group">
-                  <div class="row row-1 mb-3 align-items-center">
-                    <div class="col">Company icon<span class="text-red">*</span>
-                    </div>
-                  </div>
-                  <div class="row row-1">
-                    <div class="col-sm-6 col-lg-4">
-                      <form id="file-upload-form" class="uploader">
-                        <input id="file-upload" type="file" name="fileUpload" accept="image/*"/>
-                        <label for="file-upload" id="file-drag">
-                          <img id="file-image" src="#!" alt="Preview" class="hidden">
-                          <div id="start">
-                            <i class="bg-upload" aria-hidden="true"></i>
-                            <div>Upload</div>
-                            <div id="notimage" class="hidden">Please select an image</div>
-                          </div>
-                          <div id="response" class="hidden">
-                            <div id="messages"></div>
-                          </div>
-                        </label>
-                      </form>           
-                    </div>
-                    <div class="col-sm-6 col-lg-8 mt-3 mt-sm-0">
-                      <div class="fz-14">
-                        <p>Please upload your comapny’s icon or emblem. This image will be displayed on your auctions.</p>
-                        <p>For ideal results upload a 400x400 square jpeg file.</p>
+                <div class="col-xl-6">
+                  <div class="form-group">
+                    <div class="row row-1 mb-2 align-items-center">
+                      <div class="col">Company description<span class="text-red">*</span>
                       </div>
+                      <div class="col-auto fz-14">0/200</div>
                     </div>
+                    <textarea type="text" class="form-control form-textarea" placeholder="At Awesome auctions we are focused on developing the regions" name="description"></textarea>
+                    <div class="fz-14 mt-2">This description will be displayed on your auctions</div>
                   </div>
                 </div>
               </div>
-              <div class="col-xl-6">
-                <div class="form-group">
-                  <div class="row row-1 mb-2 align-items-center">
-                    <div class="col">Company description<span class="text-red">*</span>
-                    </div>
-                    <div class="col-auto fz-14">0/200</div>
-                  </div>
-                  <textarea type="text" class="form-control form-textarea" placeholder="At Awesome auctions we are focused on developing the regions"></textarea>
-                  <div class="fz-14 mt-2">This description will be displayed on your auctions</div>
+              <div class="row align-items-center mt-4">
+                <div class="col-sm-auto">
+                  <a href="#!" class="btn btn-success btn-sign ml-0 fz-18 font-weight-bold d-block d-sm-inline-block">Submit your registration for approval</a>
                 </div>
               </div>
-            </div>
-            <div class="row align-items-center mt-4">
-              <div class="col-sm-auto">
-                <a href="auctioneer-5.html" class="btn btn-success btn-sign ml-0 fz-18 font-weight-bold d-block d-sm-inline-block">Submit your registration for approval</a>
-              </div>
-            </div>
+            </form>
           </div>
         </div>
       </div>
@@ -301,6 +303,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.js"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/node-waves/0.7.6/waves.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.1/jquery.validate.min.js"></script>
   <script src="js/common.js"></script>
 
 </body>
