--- a/bidder-5.html
+++ b/bidder-5.html
@@ -64,85 +64,87 @@
                 <p class="pb-3">This information will only be shared with Auctioneers if you win one of their auctions. You can register as a company or a private bidder.</p>
               </div>
             </div>
-            <div class="row">
-              <div class="col-xl-6">
-                <div class="form-group form-group-gray">
-                  <div class="mb-2">First name</div>
-                  <input type="text" class="form-control" placeholder="Albus" disabled>
-                  <div class="fz-14 mt-2">Confirmed through your government ID</div>
-                </div>
-              </div>
-              <div class="col-xl-6">
-                <div class="form-group form-group-gray">
-                  <div class="mb-2">Second name</div>
-                  <input type="text" class="form-control" placeholder="Severus" disabled>
-                  <div class="fz-14 mt-2">Confirmed through your government ID</div>
-                </div>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-xl-6">
-                <div class="form-group form-group-gray">
-                  <div class="mb-2">Third name</div>
-                  <input type="text" class="form-control" placeholder="Al" disabled>
-                  <div class="fz-14 mt-2">Confirmed through your government ID</div>
-                </div>
-              </div>
-              <div class="col-xl-6">
-                <div class="form-group form-group-gray">
-                  <div class="mb-2">Family name</div>
-                  <input type="text" class="form-control" placeholder="Potter" disabled>
-                  <div class="fz-14 mt-2">Confirmed through your government ID</div>
-                </div>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-xl-6">
-                <div class="form-group">
-                  <div class="mb-2">Your email<span class="text-red">*</span></div>
-                  <input type="text" class="form-control" placeholder="albus@ministryofmagic.com.sa">
-                </div>
-              </div>
-            </div>
-            <div class="row my-2 pb-3">
-              <div class="col-auto">
-                <label class="check-group checkbox-group">
-                  <input type="checkbox">
-                  <div>Sign up as a company</div>
-                </label>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-xl-6">
-                <div class="form-group">
-                  <div class="mb-2">Company name<span class="text-red">*</span></div>
-                  <input type="text" class="form-control" placeholder="Awesome Industries Co.">
-                </div>
-              </div>
-              <div class="col-xl-6">
-                <div class="form-group">
-                  <div class="row row-1 mb-2 align-items-center">
-                    <div class="col">Registration number<span class="text-red">*</span>
-                    </div>
-                    <div class="col-auto fz-14">0/8</div>
+            <form id="form">
+              <div class="row">
+                <div class="col-xl-6">
+                  <div class="form-group form-group-gray">
+                    <div class="mb-2">First name</div>
+                    <input type="text" class="form-control" placeholder="Albus" name="firstname" disabled>
+                    <div class="fz-14 mt-2">Confirmed through your government ID</div>
                   </div>
-                  <input type="text" class="form-control" placeholder="1010584421">
+                </div>
+                <div class="col-xl-6">
+                  <div class="form-group form-group-gray">
+                    <div class="mb-2">Second name</div>
+                    <input type="text" class="form-control" placeholder="Severus" name="firstname" disabled>
+                    <div class="fz-14 mt-2">Confirmed through your government ID</div>
+                  </div>
                 </div>
               </div>
-            </div>
-            <div class="row">
-              <div class="col-xl-6">
-                <div class="form-group">
-                  <div class="mb-2">Company address<span class="text-red">*</span></div>
-                  <input type="text" class="form-control" placeholder="52 King Abdullah Rd, Riyadh">
+              <div class="row">
+                <div class="col-xl-6">
+                  <div class="form-group form-group-gray">
+                    <div class="mb-2">Third name</div>
+                    <input type="text" class="form-control" placeholder="Al" name="firstname" disabled>
+                    <div class="fz-14 mt-2">Confirmed through your government ID</div>
+                  </div>
+                </div>
+                <div class="col-xl-6">
+                  <div class="form-group form-group-gray">
+                    <div class="mb-2">Family name</div>
+                    <input type="text" class="form-control" placeholder="Potter" name="firstname" disabled>
+                    <div class="fz-14 mt-2">Confirmed through your government ID</div>
+                  </div>
                 </div>
               </div>
-            </div>
-            <div class="row align-items-center mt-4">
-              <div class="col-sm-auto">
-                <a href="bidder-6.html" class="btn btn-success btn-sign ml-0 fz-18 font-weight-bold d-block d-sm-inline-block">Confrim and start bidding</a>
+              <div class="row">
+                <div class="col-xl-6">
+                  <div class="form-group">
+                    <div class="mb-2">Your email<span class="text-red">*</span></div>
+                    <input type="email" class="form-control" placeholder="albus@ministryofmagic.com.sa" name="email">
+                  </div>
+                </div>
               </div>
-            </div>
+              <div class="row my-2 pb-3">
+                <div class="col-auto">
+                  <label class="check-group checkbox-group">
+                    <input type="checkbox">
+                    <div>Sign up as a company</div>
+                  </label>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-xl-6">
+                  <div class="form-group">
+                    <div class="mb-2">Company name<span class="text-red">*</span></div>
+                    <input type="text" class="form-control" placeholder="Awesome Industries Co." name="firstname">
+                  </div>
+                </div>
+                <div class="col-xl-6">
+                  <div class="form-group">
+                    <div class="row row-1 mb-2 align-items-center">
+                      <div class="col">Registration number<span class="text-red">*</span>
+                      </div>
+                      <div class="col-auto fz-14">0/8</div>
+                    </div>
+                    <input type="number" class="form-control" placeholder="1010584421" name="registrationnumber">
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-xl-6">
+                  <div class="form-group">
+                    <div class="mb-2">Company address<span class="text-red">*</span></div>
+                    <input type="text" class="form-control" placeholder="52 King Abdullah Rd, Riyadh" name="firstname">
+                  </div>
+                </div>
+              </div>
+              <div class="row align-items-center mt-4">
+                <div class="col-sm-auto">
+                  <a href="#!" class="btn btn-success btn-sign ml-0 fz-18 font-weight-bold d-block d-sm-inline-block">Confrim and start bidding</a>
+                </div>
+              </div>
+            </form>
           </div>
         </div>
       </div>
@@ -231,6 +233,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.js"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/node-waves/0.7.6/waves.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.1/jquery.validate.min.js"></script>
   <script src="js/common.js"></script>
 
 </body>
