--- a/bidder-account.html
+++ b/bidder-account.html
@@ -117,9 +117,14 @@
                   <div class="form-group form-group-gray">
                     <div class="row row-1 mb-2 align-items-center">
                       <div class="col text-black">Registration number</div>
-                      <div class="col-auto fz-14">10/10</div>
+                      <div class="col-auto fz-14">
+                        <div id="the-count-10">
+                          <span id="current-10">0</span>
+                          <span id="maximum-10">/10</span>
+                        </div>
+                      </div>
                     </div>
-                    <input type="number" class="form-control" placeholder="101 502520 050" name="registrationnumber2">
+                    <input type="number" class="form-control" placeholder="101 502520 050" name="registrationnumber2" id="count-ten" maxlength="10">
                   </div>
                 </div>
               </div>            
