--- a/auctioneer-4.html
+++ b/auctioneer-4.html
@@ -128,9 +128,14 @@
                     <div class="row row-1 mb-2 align-items-center">
                       <div class="col">Company registration number<span class="text-red">*</span>
                       </div>
-                      <div class="col-auto fz-14">0/8</div>
+                      <div class="col-auto fz-14">
+                        <div id="the-count">
+                          <span id="current">0</span>
+                          <span id="maximum">/8</span>
+                        </div>
+                      </div>
                     </div>
-                    <input type="number" class="form-control" placeholder="1010584421" name="registrationnumber">
+                    <input type="number" class="form-control" placeholder="1010584421" id="count-eight" maxlength="8" name="registrationnumber">
                     <div class="fz-14 mt-2">Your license registration number found on your X10C certificate</div>
                   </div>
                 </div>
@@ -202,9 +207,14 @@
                     <div class="row row-1 mb-2 align-items-center">
                       <div class="col">Company description<span class="text-red">*</span>
                       </div>
-                      <div class="col-auto fz-14">0/200</div>
+                      <div class="col-auto fz-14">
+                        <div id="the-count-200">
+                          <span id="current-200">0</span>
+                          <span id="maximum-200">/200</span>
+                        </div>
+                      </div>
                     </div>
-                    <textarea type="text" class="form-control form-textarea" placeholder="At Awesome auctions we are focused on developing the regions" name="description"></textarea>
+                    <textarea type="text" class="form-control form-textarea" placeholder="At Awesome auctions we are focused on developing the regions" name="description" id="count-200" maxlength="200"></textarea>
                     <div class="fz-14 mt-2">This description will be displayed on your auctions</div>
                   </div>
                 </div>
