--- a/auctioneer-sign-up-3.html
+++ b/auctioneer-sign-up-3.html
@@ -41,30 +41,30 @@
       <div class="collapse navbar-collapse text-center text-xl-left" id="navbarTogglerDemo02">
         <ul class="navbar-nav ml-auto align-items-xl-center my-3 my-xl-0">
           <li class="nav-item">
-            <a class="nav-link" href="#!">Auctions</a>
+            <a class="nav-link" href="#!">All Auctions</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#!">My Bids</a>
+            <a class="nav-link" href="#!">My Auctions</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#!">Transactions</a>
+            <a class="nav-link" href="#!">Account</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="#!">Account</a>
+            <a class="nav-link text-red" href="#!">Sign out</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
 
-  <section class="section bg-white">
+  <section class="section">
     <div class="container">
       <div class="form-row justify-content-center">
-        <div class="col-sm-11 col-md-8 col-xl-9">
-          <div class="">
+        <div class="col-sm-11 col-md-8 col-xl-10">
+          <div class="card card-signup">
             <div class="row align-items-center mb-2">
               <div class="col">
-                <h2 class="h2 lh-1">Edit your account</h2>
+                <h2 class="h2 lh-1">Company details</h2>
               </div>
               <div class="col-auto">
                 <div>
@@ -74,84 +74,170 @@
             </div>
             <div class="row">
               <div class="col-xl-8">
-                <p>Your information is not shared publicly on Asaas. <br> We only share your details to the auctioneer whose auction you won.</p>
-                <p class="pb-3">For security reasons, key account information such as phone number, email, and company details can only be updated through contacting Asaas.</p>
+                <p class="pb-3">In order to ensure fairness and reliability on the platform, we require auctioneers to provide their company information and license documents. Verification takes 1-3 business days and an Asaas team member might contact you for further details.</p>
               </div>
             </div>
             <form id="form">
               <div class="row">
                 <div class="col-xl-6">
-                  <div class="form-group">
-                    <div class="mb-2">First name<span class="text-red">*</span></div>
-                    <input type="text" class="form-control" placeholder="Albus" name="firstname">
+                  <div class="form-group disabled">
+                    <div class="mb-2">First name</div>
+                    <input type="text" class="form-control" placeholder="Albus" name="firstname" disabled>
+                    <div class="fz-14 mt-2">Confirmed through your government ID</div>
                   </div>
                 </div>
                 <div class="col-xl-6">
-                  <div class="form-group">
+                  <div class="form-group disabled">
                     <div class="mb-2">Second name</div>
-                    <input type="text" class="form-control" placeholder="Severus" name="firstname">
+                    <input type="text" class="form-control" placeholder="Severus" name="firstname" disabled>
+                    <div class="fz-14 mt-2">Confirmed through your government ID</div>
                   </div>
                 </div>
               </div>
               <div class="row">
                 <div class="col-xl-6">
-                  <div class="form-group">
+                  <div class="form-group disabled">
                     <div class="mb-2">Third name</div>
-                    <input type="text" class="form-control" placeholder="Al" name="firstname">
+                    <input type="text" class="form-control" placeholder="Al" name="firstname" disabled>
+                    <div class="fz-14 mt-2">Confirmed through your government ID</div>
                   </div>
                 </div>
                 <div class="col-xl-6">
-                  <div class="form-group">
-                    <div class="mb-2">Family name<span class="text-red">*</span></div>
-                    <input type="text" class="form-control" placeholder="Potter" name="firstname">
+                  <div class="form-group disabled">
+                    <div class="mb-2">Family name</div>
+                    <input type="text" class="form-control" placeholder="Potter" name="firstname" disabled>
+                    <div class="fz-14 mt-2">Confirmed through your government ID</div>
                   </div>
                 </div>
               </div>
               <div class="row">
                 <div class="col-xl-6">
-                  <div class="form-group disabled">
-                    <div class="mb-2">Phone number<span class="text-red">*</span></div>
-                    <input type="number" class="form-control" placeholder="+966548777798" name="phone" disabled>
-                  </div>
-                </div>
-                <div class="col-xl-6">
-                  <div class="form-group disabled">
-                    <div class="mb-2">Email<span class="text-red">*</span></div>
-                    <input type="email" class="form-control" placeholder="albus@ministryofmagic.com.sa" name="email" disabled>
+                  <div class="form-group">
+                    <div class="mb-2">Your work email<span class="text-red">*</span></div>
+                    <input type="email" class="form-control" placeholder="albus@ministryofmagic.com.sa" name="email">
                   </div>
                 </div>
               </div>
               <hr>
               <div class="row pt-3">
                 <div class="col-xl-6">
-                  <div class="form-group disabled">
-                    <div class="mb-2">Company name<span class="text-red">*</span></div>
-                    <input type="text" class="form-control" placeholder="Awesome Industries Co." name="firstname" disabled>
+                  <div class="form-group">
+                    <div class="mb-2">Company legal name<span class="text-red">*</span></div>
+                    <input type="text" class="form-control" placeholder="Awesome Auctions Co." name="firstname">
+                    <div class="fz-14 mt-2">As per your legal license. Example: Aweosome Auctions Co.</div>
                   </div>
                 </div>
                 <div class="col-xl-6">
-                  <div class="form-group disabled">
+                  <div class="form-group">
                     <div class="row row-1 mb-2 align-items-center">
-                      <div class="col">Registration number<span class="text-red">*</span></div>
+                      <div class="col">Company address<span class="text-red">*</span>
+                      </div>
                     </div>
-                    <input type="number" class="form-control" placeholder="101 502520 050" name="registrationnumber2" disabled>
+                    <input type="text" class="form-control" placeholder="King Fahd Rd, Al Olaya, Riyadh 11564" name="firstname">
+                    <div class="fz-14 mt-2">Your company’s headquarters or legal addres</div>
                   </div>
                 </div>
-              </div>            
+              </div>
               <div class="row">
                 <div class="col-xl-6">
-                  <div class="form-group disabled">
-                    <div class="mb-2">Company address<span class="text-red">*</span></div>
-                    <input type="text" class="form-control" placeholder="52 King Abdullah Rd, Riyadh" name="firstname" disabled>
+                  <div class="form-group">
+                    <div class="row row-1 mb-2 align-items-center">
+                      <div class="col">Company registration number<span class="text-red">*</span>
+                      </div>
+                      <div class="col-auto fz-14">
+                        <div id="the-count" class="the-count">
+                          <span id="current">0</span>
+                          <span id="maximum">/8</span>
+                        </div>
+                      </div>
+                    </div>
+                    <input type="number" class="form-control" placeholder="1010584421" id="count-eight" maxlength="8" name="registrationnumber">
+                    <div class="fz-14 mt-2">Your license registration number found on your X10C certificate</div>
+                  </div>
+                </div>
+                <div class="col-xl-6">
+                  <div class="form-group">
+                    <div class="row row-1 mb-2 align-items-center">
+                      <div class="col">Auction license certificate<span class="text-red">*</span>
+                      </div>
+                    </div>
+                    <div class="uploader-plugin">
+                      <div id="uploader">
+                        <div class="uploadDoc">
+                          <div class="fileUpload btn btn-orange">
+                            <img src="img/upload.svg" class="icon">
+                            <span class="upl" id="upload">Upload your auction license certificate</span>
+                            <input type="file" class="upload up" id="up" onchange="readURL(this);"/>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="fz-14 mt-2">Please upload your X5-C auction certificate as pdf, png, or jpeg image</div>
+                  </div>
+                </div>
+              </div>
+              <hr>
+              <div class="row pt-3">
+                <div class="col-xl-6">
+                  <div class="form-group">
+                    <div class="row row-1 mb-2 align-items-center">
+                      <div class="col">Company display name<span class="text-red">*</span>
+                      </div>
+                    </div>
+                    <input type="text" class="form-control" placeholder="Awesome Auctions" name="firstname">
+                    <div class="fz-14 mt-2">Use your company’s brand or shorthand name. Example: Awesome Auctions</div>
+                  </div>
+                  <div class="form-group">
+                    <div class="row row-1 mb-3 align-items-center">
+                      <div class="col">Company icon<span class="text-red">*</span>
+                      </div>
+                    </div>
+                    <div class="row row-1">
+                      <div class="col-sm-6 col-lg-4">
+                        <div id="file-upload-form" class="uploader">
+                          <input id="file-upload" type="file" name="fileUpload" accept="image/*"/>
+                          <label for="file-upload" id="file-drag">
+                            <img id="file-image" src="#!" alt="Preview" class="hidden">
+                            <div id="start">
+                              <i class="bg-upload" aria-hidden="true"></i>
+                              <div>Upload</div>
+                              <div id="notimage" class="hidden">Please select an image</div>
+                            </div>
+                            <div id="response" class="hidden">
+                              <div id="messages"></div>
+                            </div>
+                          </label>
+                        </div>           
+                      </div>
+                      <div class="col-sm-6 col-lg-8 mt-3 mt-sm-0">
+                        <div class="fz-14">
+                          <p>Please upload your comapny’s icon or emblem. This image will be displayed on your auctions.</p>
+                          <p>For ideal results upload a 400x400 square jpeg file.</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-xl-6">
+                  <div class="form-group">
+                    <div class="row row-1 mb-2 align-items-center">
+                      <div class="col">Company description<span class="text-red">*</span>
+                      </div>
+                      <div class="col-auto fz-14">
+                        <div id="the-count-200" class="the-count">
+                          <span id="current-200">0</span>
+                          <span id="maximum-200">/200</span>
+                        </div>
+                      </div>
+                    </div>
+                    <textarea type="text" class="form-control form-textarea" placeholder="At Awesome auctions we are focused on developing the regions" name="description" id="count-200" maxlength="200"></textarea>
+                    <div class="fz-14 mt-2">This description will be displayed on your auctions</div>
                   </div>
                 </div>
               </div>
               <div class="row align-items-center mt-4">
                 <div class="col-sm-auto">
-                  <a href="#!" class="btn btn-primary btn-sign btn-edit ml-0 fz-18 d-block d-sm-inline-block py-2">Save account changes</a>
-                </div>
-                <div class="col-sm-auto text-center mt-3 mt-sm-0">
-                  <a href="#!" class="see-all see-all-2 fz-18">Cancel edits</a>
+                  <a href="#!" class="btn btn-success btn-sign ml-0 fz-18 py-2 d-block d-sm-inline-block">Submit your registration for approval</a>
                 </div>
               </div>
             </form>
