--- a/bidder-sign-up-0.html
+++ b/bidder-sign-up-0.html
@@ -41,30 +41,31 @@
       <div class="collapse navbar-collapse text-center text-xl-left" id="navbarTogglerDemo02">
         <ul class="navbar-nav ml-auto align-items-xl-center my-3 my-xl-0">
           <li class="nav-item">
-            <a class="nav-link" href="#!">Auctions</a>
+            <a class="nav-link" href="#!">Live Auctions</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#!">My Bids</a>
+            <a class="nav-link" href="#!">How it works</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#!">Transactions</a>
+            <a class="nav-link" href="#!">Post an Auction</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="#!">Account</a>
+            <a class="nav-link" href="#!">Sign in</a>
           </li>
         </ul>
+        <a href="#!" class="btn btn-success btn-sign mb-3 mb-xl-0">Sign up now</a>
       </div>
     </div>
   </nav>
 
-  <section class="section bg-white">
+  <section class="section">
     <div class="container">
       <div class="form-row justify-content-center">
-        <div class="col-sm-11 col-md-8 col-xl-9">
-          <div class="">
+        <div class="col-sm-11 col-md-8 col-xl-6">
+          <div class="card card-signup">
             <div class="row align-items-center mb-2">
               <div class="col">
-                <h2 class="h2 lh-1">Edit your account</h2>
+                <h2 class="lh-1">Enter Asaas</h2>
               </div>
               <div class="col-auto">
                 <div>
@@ -72,86 +73,18 @@
                 </div>
               </div>
             </div>
-            <div class="row">
-              <div class="col-xl-8">
-                <p>Your information is not shared publicly on Asaas. <br> We only share your details to the auctioneer whose auction you won.</p>
-                <p class="pb-3">For security reasons, key account information such as phone number, email, and company details can only be updated through contacting Asaas.</p>
-              </div>
-            </div>
+            <p class="pb-3">Please enter your phone number to sign up or sign in. If you already have an account, you will receive an email with a magic login link.</p>
             <form id="form">
-              <div class="row">
-                <div class="col-xl-6">
-                  <div class="form-group">
-                    <div class="mb-2">First name<span class="text-red">*</span></div>
-                    <input type="text" class="form-control" placeholder="Albus" name="firstname">
-                  </div>
-                </div>
-                <div class="col-xl-6">
-                  <div class="form-group">
-                    <div class="mb-2">Second name</div>
-                    <input type="text" class="form-control" placeholder="Severus" name="firstname">
-                  </div>
-                </div>
+              <div class="form-group">
+                <div class="mb-2">Your phone number<span class="text-red">*</span></div>
+                <input type="number" class="form-control" placeholder="+966548777798" name="phone">
               </div>
-              <div class="row">
-                <div class="col-xl-6">
-                  <div class="form-group">
-                    <div class="mb-2">Third name</div>
-                    <input type="text" class="form-control" placeholder="Al" name="firstname">
-                  </div>
-                </div>
-                <div class="col-xl-6">
-                  <div class="form-group">
-                    <div class="mb-2">Family name<span class="text-red">*</span></div>
-                    <input type="text" class="form-control" placeholder="Potter" name="firstname">
-                  </div>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-xl-6">
-                  <div class="form-group disabled">
-                    <div class="mb-2">Phone number<span class="text-red">*</span></div>
-                    <input type="number" class="form-control" placeholder="+966548777798" name="phone" disabled>
-                  </div>
-                </div>
-                <div class="col-xl-6">
-                  <div class="form-group disabled">
-                    <div class="mb-2">Email<span class="text-red">*</span></div>
-                    <input type="email" class="form-control" placeholder="albus@ministryofmagic.com.sa" name="email" disabled>
-                  </div>
-                </div>
-              </div>
-              <hr>
-              <div class="row pt-3">
-                <div class="col-xl-6">
-                  <div class="form-group disabled">
-                    <div class="mb-2">Company name<span class="text-red">*</span></div>
-                    <input type="text" class="form-control" placeholder="Awesome Industries Co." name="firstname" disabled>
-                  </div>
-                </div>
-                <div class="col-xl-6">
-                  <div class="form-group disabled">
-                    <div class="row row-1 mb-2 align-items-center">
-                      <div class="col">Registration number<span class="text-red">*</span></div>
-                    </div>
-                    <input type="number" class="form-control" placeholder="101 502520 050" name="registrationnumber2" disabled>
-                  </div>
-                </div>
-              </div>            
-              <div class="row">
-                <div class="col-xl-6">
-                  <div class="form-group disabled">
-                    <div class="mb-2">Company address<span class="text-red">*</span></div>
-                    <input type="text" class="form-control" placeholder="52 King Abdullah Rd, Riyadh" name="firstname" disabled>
-                  </div>
-                </div>
-              </div>
-              <div class="row align-items-center mt-4">
+              <div class="row align-items-center mt-4 pt-3">
                 <div class="col-sm-auto">
-                  <a href="#!" class="btn btn-primary btn-sign btn-edit ml-0 fz-18 d-block d-sm-inline-block py-2">Save account changes</a>
+                  <a href="#!" class="btn btn-success btn-sign ml-0 fz-18 d-block d-sm-inline-block py-2">Get SMS code</a>
                 </div>
-                <div class="col-sm-auto text-center mt-3 mt-sm-0">
-                  <a href="#!" class="see-all see-all-2 fz-18">Cancel edits</a>
+                <div class="col-sm text-center text-sm-right mt-2 mt-sm-0">
+                  <a href="#!" class="see-all see-all-2">For Auctioneers</a>
                 </div>
               </div>
             </form>
